--- a/Pinecones/Pinecone/pom.xml
+++ b/Pinecones/Pinecone/pom.xml
@@ -39,6 +39,11 @@
             <version>5.1.39</version>
         </dependency>
         <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.46.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.1</version>
