--- a/Pinecones/Hydra/pom.xml
+++ b/Pinecones/Hydra/pom.xml
@@ -65,6 +65,11 @@
             <version>5.14.2</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>5.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.29.0-GA</version>
