--- a/Pinecones/Hydra/pom.xml
+++ b/Pinecones/Hydra/pom.xml
@@ -64,10 +64,17 @@
             <artifactId>amqp-client</artifactId>
             <version>5.14.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
             <version>4.9.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.8</version> <!-- 使用最新版本 -->
         </dependency>
         <dependency>
             <groupId>org.javassist</groupId>
