[Feat] UMCT PROTOBUF Dynamic Compiler.

--- a/Walnuts/pom.xml
+++ b/Walnuts/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>sparta</module>
         <module>sparta-console</module>
+        <module>sparta-uofs-service</module>
     </modules>
 
 
