--- a/Pinecones/Hydra/pom.xml
+++ b/Pinecones/Hydra/pom.xml
@@ -86,5 +86,10 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.29</version>
+        </dependency>
     </dependencies>
 </project>
