--- a/Walnuts/sparta-uofs-console/pom.xml
+++ b/Walnuts/sparta-uofs-console/pom.xml
@@ -37,5 +37,11 @@
             <version>2.1.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.pinecone.summer.springram</groupId>
+            <artifactId>springram</artifactId>
+            <version>2.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
