[Feat] GUID Architecture Optimization.

--- a/Pinecones/pom.xml
+++ b/Pinecones/pom.xml
@@ -23,6 +23,7 @@
         <module>summer</module>
         <module>springram</module>
         <module>hydra-default-driver</module>
+        <module>ulf-lib-construction</module>
     </modules>
 
     <dependencies>
