--- a/pom.xml
+++ b/pom.xml
@@ -163,5 +163,12 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <!--<version>3.23.4</version>-->
+            <version>4.28.2</version>
+        </dependency>
     </dependencies>
 </project>
