--- a/Pinecones/hydra-thrift-sdk/pom.xml
+++ b/Pinecones/hydra-thrift-sdk/pom.xml
@@ -29,7 +29,11 @@
         <dependency>
             <groupId>org.apache.thrift</groupId>
             <artifactId>libthrift</artifactId>
-            <version>0.9.3</version>
+            <version>0.18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
 </project>
