[feat] Maven 清理

--- a/Pinecones/pom.xml
+++ b/Pinecones/pom.xml
@@ -24,7 +24,7 @@
         <module>springram</module>
         <module>hydra-default-driver</module>
         <module>ulf-lib-construction</module>
-        <module>hydra-thrift-sdk</module>
+        <module>hydra-lib-thrift-sdk</module>
         <module>hydra-lib-uofs-cache</module>
     </modules>
 
