--- a/Pinecones/hydra-lib-thrift-sdk/pom.xml
+++ b/Pinecones/hydra-lib-thrift-sdk/pom.xml
@@ -7,8 +7,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.pinecone.hydra.storage.uofs</groupId>
-    <artifactId>hydra-lib-uofs-cache</artifactId>
+    <groupId>com.pinecone.hydra.sdk.thrift</groupId>
+    <artifactId>hydra-lib-thrift-sdk</artifactId>
     <version>1.2.1</version>
 
     <properties>
@@ -19,22 +19,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.pinecone.hydra</groupId>
-            <artifactId>hydra</artifactId>
-            <version>2.1.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.pinecone.slime.jelly</groupId>
-            <artifactId>jelly</artifactId>
-            <version>2.1.0</version>
-            <scope>compile</scope>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
 </project>
