--- a/Walnuts/sparta-uac-console/pom.xml
+++ b/Walnuts/sparta-uac-console/pom.xml
@@ -20,33 +20,44 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.walnut.sparta.uofs.console</groupId>
-    <artifactId>sparta-uofs-console</artifactId>
+    <groupId>com.walnut.sparta.account.console</groupId>
+    <artifactId>sparta-uac-console</artifactId>
     <version>2.1.0</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.6.13</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.pinecone</groupId>
             <artifactId>pinecone</artifactId>
             <version>2.5.1</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.pinecone.hydra.driver.default</groupId>
+            <artifactId>hydra-default-driver</artifactId>
+            <version>2.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.walnut.sparta.api.uac</groupId>
+            <artifactId>sparta-api-uac</artifactId>
+            <version>2.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sauron.radium</groupId>
+            <artifactId>radium</artifactId>
+            <version>2.1.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.pinecone.hydra</groupId>
@@ -61,16 +72,21 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.sauron.radium</groupId>
-            <artifactId>radium</artifactId>
-            <version>2.1.0</version>
+            <groupId>com.pinecone.hydra.sdk.thrift</groupId>
+            <artifactId>hydra-lib-thrift-sdk</artifactId>
+            <version>1.2.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.pinecone.hydra.driver.default</groupId>
-            <artifactId>hydra-default-driver</artifactId>
-            <version>2.1.0</version>
-            <scope>compile</scope>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.thrift</groupId>
@@ -78,18 +94,5 @@
             <version>0.18.0</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>com.pinecone.hydra.sdk.thrift</groupId>
-            <artifactId>hydra-lib-thrift-sdk</artifactId>
-            <version>1.2.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.walnut.sparta.api.uac</groupId>
-            <artifactId>sparta-api-uac</artifactId>
-            <version>2.1.0</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
-
 </project>
